# analyzer4pg

./: README.md  install.bat  install.sh  requirements.txt  setup.cfg
analyzer4pg/: __init__.py  cli.py  connection.py  index_advisor.py  plan_analyzer.py  query_advisor.py  reporter.py
analyzer4pg/web/: __init__.py  app.py
analyzer4pg/web/static/: index.html
