[metadata]
name = analyzer4pg
version = 1.0.0
description = PostgreSQL Query Analyzer - Oracle Tuning Advisor style performance analysis
long_description = file: README.md
long_description_content_type = text/markdown
author = analyzer4pg
license = MIT
python_requires = >=3.8

[options]
packages = find:
install_requires =
    psycopg2-binary>=2.9.0
    rich>=13.0.0
    click>=8.0.0
    sqlparse>=0.4.4
    flask>=3.0.0

[options.entry_points]
console_scripts =
    analyzer4pg = analyzer4pg.cli:main
